changed the project URL to the new homepage

--- a/jfreereport/source/overview.html
+++ b/jfreereport/source/overview.html
@@ -6,7 +6,7 @@ with <code>TableModel</code> data, providing on-screen print preview,
 printing, export to PDF, HTML, text, Excel and CSV format.
 <p>
 Please visit <a
-href="http://www.jfree.org/jfreereport/index.html">http://www.jfree.org/jfreereport/index.html</a>
+href="http://jfreereport.pentah.org.org/">http://jfreereport.pentaho.org/</a>
 for the latest information about JFreeReport.
 </body>
 </html>
